@@ -1,3 +1,5 @@
+=== Feb 03 ===
++ Some changes reflecting upon latest requests and blackbox
 === Jan 12 ===
 + @help/@plugins command and helpstrings
 === Jan 09 ===
